--- a/HomePage.html
+++ b/HomePage.html
@@ -78,8 +78,9 @@
 
     .col-container {
         display: table;
-        width: 100%;
+        width: 50%;
         height: 100%;
+        align-self: center !important;
     }
 
     .col {
@@ -170,8 +171,13 @@
     }
 </style>
 <br/><br/>
-<div class="container">
-    <div class="col-container right">
+<div class="container col-md-offset-4">
+    <br/>
+    <br/>
+    <br/>
+    <br/>
+    <br/>
+    <div class="col-container ">
         <!-- <div class="col componentColor">
             <br/>
             <br/>
@@ -280,6 +286,7 @@
                     <div class="w3-border w3-border-light-gray w3-card-12 w3-padding componentColor">
                         <form id="login-form" class="form-horizontal">
 
+                            <br/>
                             <div class="form-group">
                                 <div class="col-md-10">
                                     <input type="text" required autofocus name="email" value=""
