--- a/editProfile.html
+++ b/editProfile.html
@@ -315,14 +315,11 @@
     <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
     <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
 
-    <footer class="text-center w3-text-white w3-padding" style="background-color:#232935 !important">
-        تمامی حقوق مادی و معنوی این سایت متعلق به DisPoll است
-        <br />
-        طراحی و پیاده سازی توسط Group G
-    </footer>
-
+    
     <script>
         //Scripts for design and it's actions
+        const data = 'http://185.88.179.80:8000';
+        var my_address;
 
         /*
         Function opening and closing subset of an tag
@@ -431,8 +428,7 @@
             /*
             Request for getting cities name and id from server
             */
-            $.get("address.txt", function (data) {
-                const my_address = data + "/cities/";
+                my_address = data + "/cities/";
                 $.ajax({
                     type: 'GET',
                     // dataType: 'json',
@@ -455,7 +451,6 @@
                     error: function () {
                         alert(" اتصال به اینترنت برقرار نیست. ");}
                 })
-            });
 
 
 
@@ -490,8 +485,7 @@
                 editProfile_formData.append("avatar", avatar);
 
 
-                $.get("address.txt", function (data) {
-                    const my_address = data + "/salesman/edit-profile/";
+                    my_address = data + "/salesman/edit-profile/";
 
                     $.ajax({
                         type: 'POST',
@@ -511,8 +505,6 @@
                             alert(" اتصال به اینترنت برقرار نیست. ");
                         }
                     })
-
-                });
             });
 
             /*
@@ -522,8 +514,8 @@
             $("#logout").click(function () {
                 var logout_var = confirm(" آیا اطمینان از خروج دارید؟ ");
                 if (logout_var ==true){
-                    $.get("address.txt", function (data) {
-                        const my_address = data + "/salesman/logout/";
+                        
+                        my_address = data + "/salesman/logout/";
                         $.ajax({
                             type: 'POST',
                             dataType: 'json',
@@ -544,7 +536,6 @@
                             }
                         })
 
-                    });
 
                 }else{
                     alert(" از این که همراه ما خواهید بود متشکریم. ");
