--- a/PatronMainPage.html
+++ b/PatronMainPage.html
@@ -117,14 +117,10 @@
 <br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
 <br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
 
-<footer class="text-center w3-text-white w3-padding" style="background-color:#232935 !important">
-    تمامی حقوق مادی و معنوی این سایت متعلق به DisPoll است
-    <br/>
-    طراحی و پیاده سازی توسط Group G
-</footer>
-
 <script>
     //Scripts for design and it's actions
+    const data = 'http://185.88.179.80:8000';
+    var my_address;
 
     /*
     Function opening and closing subset of an tag
@@ -202,7 +198,7 @@
         $("#logout").click(function () {
             var logout_var = confirm(" آیا اطمینان از خروج دارید؟ ");
             if (logout_var ==true){
-                $.get("address.txt", function (data) {
+
                     const my_address = data + "/salesman/logout/";
                     $.ajax({
                         type: 'POST',
@@ -223,8 +219,6 @@
                             alert(" اتصال به اینترنت برقرار نیست. ");
                         }
                     })
-
-                });
 
             }else{
                 alert(" از این که همراه ما خواهید بود متشکریم. ");
