--- a/addDiscount.html
+++ b/addDiscount.html
@@ -308,14 +308,10 @@
 <br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
 <br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
 
-<footer class="text-center w3-text-white w3-padding" style="background-color:#232935 !important">
-    تمامی حقوق مادی و معنوی این سایت متعلق به DisPoll است
-    <br/>
-    طراحی و پیاده سازی توسط Group G
-</footer>
-
 <script>
     //Scripts for design and it's actions
+    const data = 'http://185.88.179.80:8000';
+    var my_address;
 
     /*
     Function opening and closing subset of an tag
@@ -477,8 +473,7 @@
             formData.append("description", description_var);
 
 
-            $.get("address.txt", function (data) {
-                const my_address = data + "/salesman/add-discount/";
+                my_address = data + "/salesman/add-discount/";
                 $.ajax({
                     type: 'POST',
                     url: my_address,
@@ -502,7 +497,6 @@
                     }
                 })
 
-            });
 
 
         });
@@ -514,8 +508,8 @@
         $("#logout").click(function () {
             var logout_var = confirm(" آیا اطمینان از خروج دارید؟ ");
             if (logout_var ==true){
-                $.get("address.txt", function (data) {
-                    const my_address = data + "/salesman/logout/";
+
+                    my_address = data + "/salesman/logout/";
                     $.ajax({
                         type: 'POST',
                         dataType: 'json',
@@ -536,7 +530,6 @@
                         }
                     })
 
-                });
 
             }else{
                 alert(" از این که همراه ما خواهید بود متشکریم. ");
