--- a/pollPage.html
+++ b/pollPage.html
@@ -215,14 +215,11 @@
     <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
     <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
 
-    <footer class="text-center w3-text-white w3-padding" style="background-color:#232935 !important">
-        تمامی حقوق مادی و معنوی این سایت متعلق به DisPoll است
-        <br />
-        طراحی و پیاده سازی توسط Group G
-    </footer>
-
+    
     <script>
         //Scripts for design and it's actions
+        const data = 'http://185.88.179.80:8000';
+        var my_address;
 
         /*
         Function opening and closing subset of an tag
@@ -347,9 +344,8 @@
                 poll_formData.append("phone_number", poll_form_var.phoneNumber.value);
                 poll_formData.append("shop", poll_form_var.shops.value);
 
-                $.get("address.txt", function (data) {
 
-                    const my_address = data + "/salesman/poll-to-customer/";
+                    my_address = data + "/salesman/poll-to-customer/";
 
                     $.ajax({
                         type: 'POST',
@@ -373,7 +369,6 @@
                             alert(" اتصال به اینترنت برقرار نیست. ");}
                     })
 
-                });
 
             });
 
@@ -385,8 +380,7 @@
             $("#logout").click(function () {
                 var logout_var = confirm(" آیا اطمینان از خروج دارید؟ ");
                 if (logout_var ==true){
-                    $.get("address.txt", function (data) {
-                        const my_address = data + "/salesman/logout/";
+                        my_address = data + "/salesman/logout/";
                         $.ajax({
                             type: 'POST',
                             dataType: 'json',
@@ -407,7 +401,6 @@
                             }
                         })
 
-                    });
 
                 }else{
                     alert(" از این که همراه ما خواهید بود متشکریم. ");
