--- a/showShop.html
+++ b/showShop.html
@@ -192,7 +192,7 @@
 
     <script>
         //Scripts for design and it's actions
-        const data = 'http://185.88.179.80:800';
+        const data = 'http://185.88.179.80:8000';
         var my_address;
 
         /*
@@ -320,8 +320,8 @@
             $("#logout").click(function () {
                 var logout_var = confirm(" آیا اطمینان از خروج دارید؟ ");
                 if (logout_var ==true){
-                    $.get("address.txt", function (data) {
-                        const my_address = data + "/salesman/logout/";
+
+                        my_address = data + "/salesman/logout/";
                         $.ajax({
                             type: 'POST',
                             dataType: 'json',
@@ -341,8 +341,6 @@
                                 alert(" اتصال به اینترنت برقرار نیست. ");
                             }
                         })
-
-                    });
 
                 }else{
                     alert(" از این که همراه ما خواهید بود متشکریم. ");
